@@ -70,10 +70,20 @@ config EXAMPLES_USBMSC_DEBUGMM
 	---help---
 		Enables some debug tests to check for memory usage and memory leaks.
 
+config EXAMPLES_USBMSC_TRACE
+	bool "Trace USB activity"
+	default n
+	depends on (USBDEV_TRACE || DEBUG_USB) && !NSH_BUILTIN_APPS
+	---help---
+		If this example is built as a standalone task and if USB device tracing is
+		enabled, then this example can be configured to unobtrusively monitor
+		USB activity by selecting this option.
+
+if EXAMPLES_USBMSC_TRACE
+
 config EXAMPLES_USBMSC_TRACEINIT
 	bool "USB Trace Initialization"
 	default n
-	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
@@ -83,7 +93,6 @@ config EXAMPLES_USBMSC_TRACEINIT
 config EXAMPLES_USBMSC_TRACECLASS
 	bool "USB Trace Class"
 	default n
-	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
@@ -93,7 +102,6 @@ config EXAMPLES_USBMSC_TRACECLASS
 config EXAMPLES_USBMSC_TRACETRANSFERS
 	bool "USB Trace Transfers"
 	default n
-	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
@@ -103,7 +111,6 @@ config EXAMPLES_USBMSC_TRACETRANSFERS
 config EXAMPLES_USBMSC_TRACECONTROLLER
 	bool "USB Trace Device Controller Events"
 	default n
-	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
@@ -113,12 +120,12 @@ config EXAMPLES_USBMSC_TRACECONTROLLER
 config EXAMPLES_USBMSC_TRACEINTERRUPTS
 	bool "USB Trace Device Controller Interrupt Events"
 	default n
-	depends on USBDEV_TRACE || DEBUG_USB
 	---help---
 		If USBDEV_TRACE is enabled (or DEBUG and DEBUG_USB),
 		then the example code will also manage the USB trace output.  The
 		amount of trace output can be controlled this configuration value:
 		This setting will show USB device controller interrupt-related events.
 
-endif
+endif # EXAMPLES_USBMSC_TRACE
+endif # EXAMPLES_USBMSC
 
